<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity">


/>
    <TextView
        android:id="@+id/text_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_reward"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito"
        android:textSize="25sp"
        android:layout_marginTop="100dp"/>

    <TextView
    android:id="@+id/text_result_money"
    android:layout_width="wrap_content"
        android:layout_below="@id/text_information"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:text="@string/reward_money"
        android:layout_height="wrap_content"/>


    <View
        android:id="@+id/line_price"
        android:layout_width="80dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_result_money"
        android:background="#008000"/>

    <TextView
        android:id="@+id/text_result_discount"
        android:layout_width="wrap_content"
        android:layout_below="@id/line_price"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito"
        android:layout_marginTop="45dp"
        android:textSize="24sp"
        android:text="@string/reward_discount"
        android:layout_height="wrap_content"/>


    <View
        android:layout_width="80dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_result_discount"
        android:background="#008000"/>




    <View
        android:id="@+id/background_confirm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/background_to_confirm_activity"
        android:layout_marginBottom="-25dp"
        android:backgroundTint="#59EB59"
                android:layout_alignParentBottom="true"
     />

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/confirm"/>


</RelativeLayout>